modified index page styles

--- a/source/directions.html
+++ b/source/directions.html
@@ -40,9 +40,9 @@
         </svg>
         <svg class="menu__close-icon visually-hidden" width="14" height="14" viewBox="0 0 14 14"
           xmlns="http://www.w3.org/2000/svg">
-          <path d="M12.25 1.75L1.75 12.25" stroke="#192144" stroke-width="1.4" stroke-linecap="round"
+          <path d="M12.25 1.75L1.75 12.25" stroke="$dark-blue" stroke-width="1.4" stroke-linecap="round"
             stroke-linejoin="round" />
-          <path d="M1.75 1.75L12.25 12.25" stroke="#192144" stroke-width="1.4" stroke-linecap="round"
+          <path d="M1.75 1.75L12.25 12.25" stroke="$dark-blue" stroke-width="1.4" stroke-linecap="round"
             stroke-linejoin="round" />
         </svg>
       </a>
@@ -1252,7 +1252,7 @@
             height="30" alt="Логотип" />
         </picture>
       </a>
-      <ul class="page-footer__list social-list">
+      <ul class="page-footer__socials social-list">
         <li class="social-list__item">
           <a class="social-list__link icon icon--dark-blue" href="https://www.facebook.com/htmlacademy">
             <svg class="icon icon--background-padding icon--main-background" width="20" height="20" viewBox="0 0 11 21"
