added border radiuses to sections of index page

--- a/source/index.html
+++ b/source/index.html
@@ -147,7 +147,7 @@
       </div>
     </div>
   </header>
-  <main class="page-main page-main--dark">
+  <main class="page-main">
     <h1 class="visually-hidden">Погнали - лучший сайт для поиска попутчиков!</h1>
     <section class="promo">
       <div class="container">
@@ -788,7 +788,7 @@
     <section class="contacts ">
       <header class="contacts__header">
         <h2 class="visually-hidden">Контакты компании!</h2>
-        <div class="container contacts__get-direction ">
+        <div class="container contacts__get-direction">
           <dl class="contacts__list icon-list">
             <div class="contacts__icon icon-list__item">
               <dt class="icon-list__map-point">
@@ -808,16 +808,16 @@
             </svg>
           </a>
         </div>
-        <picture>
-          <source media="(min-width: 1440px)" srcset="img/map-large-icon.png 1x, img/map-large-icon@2x.png 2x">
-          <source media="(min-width: 768px)" srcset="img/map-medium-icon.png 1x, img/map-medium-icon@2x.png 2x">
-          <img class="contacts__map" src="img/map-small-icon.png" srcset="img/map-small-icon@2x.png 2x" width="320"
-            height="424" alt="Карта" />
-        </picture>
-        <svg class="contacts__map-point" width="41" height="41">
-          <use xlink:href="/img/sprite.svg#double-point"></use>
-        </svg>
       </header>
+      <picture>
+        <source media="(min-width: 1440px)" srcset="img/map-large-icon.png 1x, img/map-large-icon@2x.png 2x">
+        <source media="(min-width: 768px)" srcset="img/map-medium-icon.png 1x, img/map-medium-icon@2x.png 2x">
+        <img class="contacts__map" src="img/map-small-icon.png" srcset="img/map-small-icon@2x.png 2x" width="320"
+          height="424" alt="Карта" />
+      </picture>
+      <svg class="contacts__map-point" width="41" height="41">
+        <use xlink:href="/img/sprite.svg#double-point"></use>
+      </svg>
     </section>
   </main>
   <footer class="page-footer">
