--- a/source/companions.html
+++ b/source/companions.html
@@ -1872,7 +1872,7 @@
   <footer class="page-footer">
     <div class="page-footer__container container">
       <h2 class="visually-hidden">Погнали?</h2>
-      <a href="index.html" class="page-footer__logo-mobile">
+      <a href="index.html">
         <picture>
           <source media="(min-width: 768px)" srcset="img/logo-medium-dark.png 1x, img/logo-medium-dark@2x.png 2x">
           <img class="logo" src="img/logo-mobile-dark.png" srcset="img/logo-mobile-dark@2x.png 2x" width="226"
