--- a/source/index.html
+++ b/source/index.html
@@ -436,32 +436,8 @@
                     height="30" alt="Фото Тани Фирсовой" />
                 </picture>
                 <div class="users__level general-info__level">
-                  <!-- <symbol  viewBox="0 0 60 60"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <circle cx="30" cy="30" r="30" fill-opacity="0.6" />
-                  <path class="users__level-icon"
-                    d="M22.5503 3.00922C15.7757 4.87906 9.95203 9.22814 6.23551 15.1929C2.51899 21.1577 1.18146 28.302 2.48848 35.2073C3.7955 42.1126 7.65149 48.2739 13.2908 52.4678C18.9302 56.6618 25.9405 58.5817 32.9298 57.8463C39.9191 57.1109 46.3763 53.7741 51.0193 48.4983C55.6623 43.2226 58.1516 36.3937 57.9929 29.3676C57.8341 22.3415 55.039 15.632 50.1625 10.5713C45.2859 5.51057 38.6846 2.46876 31.6692 2.0498" />
-                  <text class="users__level-number general-info__level-number" x="17" y="27">
-                    99
-                  </text>
-                  <line class="users__level-line general-info__level-line" x1="10" y1="33" x2="50" y2="33"
-                    stroke="black" />
-                  <text class="users__level-text general-info__level-text" x="15" y="47">level</text>
-                </symbol> -->
-                  <!-- <svg class="users__level-icon general-info__level-icon" width="60" height="60">
-                  <use xlink:href="/img/sprite.svg#level-99"></use>
-                </svg> -->
-                  <svg class="general-info__level-icon" width="60" height="60" viewBox="0 0 60 60"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="30" cy="30" r="30" fill-opacity="0.6" />
-                    <path class="users__level-icon"
-                      d="M22.5503 3.00922C15.7757 4.87906 9.95203 9.22814 6.23551 15.1929C2.51899 21.1577 1.18146 28.302 2.48848 35.2073C3.7955 42.1126 7.65149 48.2739 13.2908 52.4678C18.9302 56.6618 25.9405 58.5817 32.9298 57.8463C39.9191 57.1109 46.3763 53.7741 51.0193 48.4983C55.6623 43.2226 58.1516 36.3937 57.9929 29.3676C57.8341 22.3415 55.039 15.632 50.1625 10.5713C45.2859 5.51057 38.6846 2.46876 31.6692 2.0498" />
-                    <text class="users__level-number general-info__level-number" x="17" y="27">
-                      99
-                    </text>
-                    <line class="users__level-line general-info__level-line" x1="10" y1="33" x2="50" y2="33"
-                      stroke="black" />
-                    <text class="users__level-text general-info__level-text" x="15" y="47">level</text>
+                  <svg class="general-info__level-icon" width="60" height="60">
+                    <use xlink:href="/img/sprite.svg#level-99"></use>
                   </svg>
                 </div>
                 <div class="users__card-info card-list__info">
@@ -574,17 +550,8 @@
                     height="30" alt="Фото Петра Демина" />
                 </picture>
                 <div class="users__level general-info__level">
-                  <svg class="general-info__level-icon" width="60" height="60" viewBox="0 0 60 60" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="30" cy="30" r="30" fill="black" fill-opacity="0.6" />
-                    <path class="users__level-icon"
-                      d="M4.74236 17.9148C2.16557 23.3002 1.37757 29.3683 2.4934 35.2332C3.60922 41.0982 6.57045 46.4529 10.9448 50.5159C15.3192 54.5788 20.8777 57.1372 26.8089 57.8176C32.7402 58.498 38.7336 57.2647 43.9144 54.2979C49.0952 51.3311 53.1921 46.786 55.607 41.3261C58.022 35.8662 58.6285 29.7773 57.3382 23.9483C56.0478 18.1193 52.9282 12.8553 48.4345 8.92466C43.9408 4.99408 38.3084 2.6027 32.3595 2.0996" />
-                    <text class="users__level-number general-info__level-number" x="17" y="27">
-                      80
-                    </text>
-                    <line class="users__level-line general-info__level-line" x1="10" y1="33" x2="50" y2="33"
-                      stroke="black" />
-                    <text class="users__level-text general-info__level-text" x="15" y="47">level</text>
+                  <svg class="general-info__level-icon" width="60" height="60">
+                    <use xlink:href="/img/sprite.svg#level-88"></use>
                   </svg>
                 </div>
                 <div class="users__card-info card-list__info">
@@ -823,7 +790,7 @@
   <footer class="page-footer">
     <div class="page-footer__container container">
       <h2 class="visually-hidden">Погнали?</h2>
-      <a href="#" class="page-footer__logo-mobile">
+      <a href="#">
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo-large-dark.png 1x, img/logo-large-dark@2x.png 2x">
           <source media="(min-width: 768px)" srcset="img/logo-medium-dark.png 1x, img/logo-medium-dark@2x.png 2x">
@@ -858,7 +825,7 @@
       <div class="page-footer__developed">
         <span class="page-footer__developed-caption text text--default">Разработано</span>
         <a href="https://htmlacademy.ru/study">
-          <svg class="icon icon--dark-blue" width="27" height="34">
+          <svg class="page-footer__logo icon icon--dark-blue" width="27" height="34">
             <use xlink:href="/img/sprite.svg#logo"></use>
           </svg>
         </a>
