--- a/source/index.html
+++ b/source/index.html
@@ -33,14 +33,14 @@
       </a>
       <a class="menu__toggle">
         <svg class="page-header__open-icon menu__open-icon icon icon--light" width="25" height="11">
-          <use xlink:href="/img/sprite.svg#menu-toggle-open"></use>
+          <use xlink:href="../img/sprite.svg#menu-toggle-open"></use>
         </svg>
         <svg class="menu__close-icon visually-hidden" width="14" height="14">
-          <use xlink:href="/img/sprite.svg#menu-toggle-close"></use>
+          <use xlink:href="../img/sprite.svg#menu-toggle-close"></use>
         </svg>
       </a>
       <svg class="menu__line" width="60" height="2">
-        <use xlink:href="/img/sprite.svg#menu-dash"></use>
+        <use xlink:href="../img/sprite.svg#menu-dash"></use>
       </svg>
       <nav class="menu__nav main-nav">
         <ul class="main-nav__list site-list">
@@ -60,14 +60,14 @@
           <li class="icon-list__item icon-list__item--stuck">
             <a class="icon-list__link">
               <svg class="icon icon--dark-blue icon--middle-background icon--background-padding" width="19" height="19">
-                <use xlink:href="/img/sprite.svg#phone"></use>
+                <use xlink:href="../img/sprite.svg#phone"></use>
               </svg>
             </a>
           </li>
           <li class="icon-list__item icon-list__item--stuck">
             <a class="icon-list__link">
               <svg class="icon icon--dark-blue icon--dark-background icon--background-padding" width="17" height="14">
-                <use xlink:href="/img/sprite.svg#mail"></use>
+                <use xlink:href="../img/sprite.svg#mail"></use>
               </svg>
             </a>
           </li>
@@ -104,7 +104,7 @@
                 <svg
                   class="icon-list__icon icon-list__link icon icon--main-theme icon--dark-blue-background icon--background-padding"
                   width="17" height="15">
-                  <use xlink:href="/img/sprite.svg#home-phone"></use>
+                  <use xlink:href="../img/sprite.svg#home-phone"></use>
                 </svg>
               </dt>
               <dd class="text page-header__details icon-list__details">8 800 555-86-28</dd>
@@ -114,7 +114,7 @@
                 <svg
                   class="icon-list__icon icon-list__link icon icon--main-theme icon--dark-blue-background icon--background-padding"
                   width="19" height="13">
-                  <use xlink:href="/img/sprite.svg#e-mail"></use>
+                  <use xlink:href="../img/sprite.svg#e-mail"></use>
                 </svg>
               </dt>
               <dd class="text page-header__details icon-list__details">MAIL@HTMLACADEMY.RU</dd>
@@ -124,21 +124,21 @@
             <li class="social-list__item">
               <a class="social-list__link icon icon__social" href="https://www.facebook.com/htmlacademy">
                 <svg class="social-list__facebook" width="11" height="21">
-                  <use xlink:href="/img/sprite.svg#facebook"></use>
+                  <use xlink:href="../img/sprite.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list__item">
               <a class="social-list__link icon icon__social" href="https://vk.com/htmlacademy">
                 <svg class="social-list__vk" width="23" height="12">
-                  <use xlink:href="/img/sprite.svg#vk"></use>
+                  <use xlink:href="../img/sprite.svg#vk"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list__item">
               <a class="social-list__link icon icon__social" href="https://www.instagram.com/htmlacademy">
                 <svg class="social-list__instagramm" width="18" height="18">
-                  <use xlink:href="/img/sprite.svg#instagram"></use>
+                  <use xlink:href="../img/sprite.svg#instagram"></use>
                 </svg>
               </a>
             </li>
@@ -209,14 +209,14 @@
         </a>
         <a class="menu__toggle menu__toggle--hidden">
           <svg class="menu__open-icon icon icon--light" width="25" height="11">
-            <use xlink:href="/img/sprite.svg#menu-toggle-open"></use>
+            <use xlink:href="../img/sprite.svg#menu-toggle-open"></use>
           </svg>
           <svg class="menu__close-icon visually-hidden" width="14" height="14">
-            <use xlink:href="/img/sprite.svg#menu-toggle-close"></use>
+            <use xlink:href="../img/sprite.svg#menu-toggle-close"></use>
           </svg>
         </a>
         <svg class="menu__line menu__line--dark" width="60" height="2">
-          <use xlink:href="/img/sprite.svg#menu-dash"></use>
+          <use xlink:href="../img/sprite.svg#menu-dash"></use>
         </svg>
         <nav class="menu__nav main-nav">
           <ul class="main-nav__list site-list">
@@ -237,7 +237,7 @@
               <a class="icon-list__link">
                 <svg class="promo__icon icon icon--dark-blue icon--middle-background icon--background-padding"
                   width="19" height="19">
-                  <use xlink:href="/img/sprite.svg#phone"></use>
+                  <use xlink:href="../img/sprite.svg#phone"></use>
                 </svg>
               </a>
             </li>
@@ -245,7 +245,7 @@
               <a class="icon-list__link">
                 <svg class="promo__icon icon icon--dark-blue icon--dark-background icon--background-padding" width="17"
                   height="14">
-                  <use xlink:href="/img/sprite.svg#mail"></use>
+                  <use xlink:href="../img/sprite.svg#mail"></use>
                 </svg>
               </a>
             </li>
@@ -271,7 +271,7 @@
           <button class="about__details button button--arrow">
             <span class="button__caption">Подробнее</span>
             <svg width="10" height="18">
-              <use xlink:href="/img/sprite.svg#arrow-thick-right"></use>
+              <use xlink:href="../img/sprite.svg#arrow-thick-right"></use>
             </svg>
           </button>
         </div>
@@ -315,7 +315,7 @@
                     </dl>
                     <div class="countries__visists-count">
                       <svg class="visits-list__user-icon" width="14" height="14">
-                        <use xlink:href="/img/sprite.svg#man"></use>
+                        <use xlink:href="../img/sprite.svg#man"></use>
                       </svg>
                       <small class="text visits-list__count">18321</small>
                     </div>
@@ -350,7 +350,7 @@
                     </dl>
                     <div class="countries__visists-count">
                       <svg class="visits-list__user-icon" width="14" height="14">
-                        <use xlink:href="/img/sprite.svg#man"></use>
+                        <use xlink:href="../img/sprite.svg#man"></use>
                       </svg>
                       <small class="text visits-list__count">12518</small>
                     </div>
@@ -385,7 +385,7 @@
                     </dl>
                     <div class="countries__visists-count">
                       <svg class="visits-list__user-icon" width="14" height="14">
-                        <use xlink:href="/img/sprite.svg#man"></use>
+                        <use xlink:href="../img/sprite.svg#man"></use>
                       </svg>
                       <small class="text visits-list__count">5326</small>
                     </div>
@@ -398,7 +398,7 @@
         <a class="countries__all-countries button button--arrow" href="allcountries.html">
           <span class="button__caption button--padding-left">Показать все</span>
           <svg class="button__icon button--padding-right" width="11" height="12">
-            <use xlink:href="/img/sprite.svg#arrow-thick-right"></use>
+            <use xlink:href="../img/sprite.svg#arrow-thick-right"></use>
           </svg>
         </a>
       </div>
@@ -437,7 +437,7 @@
                 </picture>
                 <div class="users__level general-info__level">
                   <svg class="general-info__level-icon" width="60" height="60">
-                    <use xlink:href="/img/sprite.svg#level-99"></use>
+                    <use xlink:href="../img/sprite.svg#level-99"></use>
                   </svg>
                 </div>
                 <div class="users__card-info card-list__info">
@@ -480,7 +480,7 @@
                     <div class="card-list__user-info">
                       <div class="users__name">
                         <svg class="users__online-status-icon card-list__offline" width="6" height="7">
-                          <use xlink:href="/img/sprite.svg#point"></use>
+                          <use xlink:href="../img/sprite.svg#point"></use>
                         </svg>
                         <cite class="text card-list__user-name">Таня Фирсова</cite>
                       </div>
@@ -510,7 +510,7 @@
                     <li class="users__icon icon-list__item">
                       <a class="users__plain-1 icon-list__link">
                         <svg class="icon" width="16" height="16">
-                          <use xlink:href="/img/sprite.svg#plain"></use>
+                          <use xlink:href="../img/sprite.svg#plain"></use>
                         </svg>
                         <div class="users__plain users__plain--visible-1 tooltip text">Авиаперелет</div>
                       </a>
@@ -518,7 +518,7 @@
                     <li class="users__icon icon-list__item">
                       <a class="users__bus-1 icon-list__link">
                         <svg class="icon icon--disabled" width="16" height="16">
-                          <use xlink:href="/img/sprite.svg#bus"></use>
+                          <use xlink:href="../img/sprite.svg#bus"></use>
                         </svg>
                         <div class="users__bus users__bus--visible-1 tooltip text">Автотранспорт</div>
                       </a>
@@ -526,7 +526,7 @@
                     <li class="users__icon icon-list__item">
                       <a class="users__bicycle-1 icon-list__link">
                         <svg class="icon icon--disabled" width="16" height="16">
-                          <use xlink:href="/img/sprite.svg#bicycle"></use>
+                          <use xlink:href="../img/sprite.svg#bicycle"></use>
                         </svg>
                         <div class="users__bicycle users__bicycle--visible-1 tooltip text">Велосипед</div>
                       </a>
@@ -534,7 +534,7 @@
                     <li class="users__icon icon-list__item">
                       <a class="users__walk-1 icon-list__link">
                         <svg class="icon icon--transparent-theme icon--disabled" width="16" height="16">
-                          <use xlink:href="/img/sprite.svg#walk"></use>
+                          <use xlink:href="../img/sprite.svg#walk"></use>
                         </svg>
                         <div class="users__walk users__walk--visible-1 tooltip text">Пешком</div>
                       </a>
@@ -551,7 +551,7 @@
                 </picture>
                 <div class="users__level general-info__level">
                   <svg class="general-info__level-icon" width="60" height="60">
-                    <use xlink:href="/img/sprite.svg#level-88"></use>
+                    <use xlink:href="../img/sprite.svg#level-88"></use>
                   </svg>
                 </div>
                 <div class="users__card-info card-list__info">
@@ -583,7 +583,7 @@
                     <div class="card-list__user-info">
                       <div class="users__name">
                         <svg class="users__online-status-icon card-list__online" width="7" height="7">
-                          <use xlink:href="/img/sprite.svg#point"></use>
+                          <use xlink:href="../img/sprite.svg#point"></use>
                         </svg>
                         <cite class="text card-list__user-name">Петя Демин</cite>
                       </div>
@@ -610,7 +610,7 @@
                     <li class="users__icon icon-list__item">
                       <a class="users__plain-2 icon-list__link">
                         <svg class="icon" width="16" height="16">
-                          <use xlink:href="/img/sprite.svg#plain"></use>
+                          <use xlink:href="../img/sprite.svg#plain"></use>
                         </svg>
                         <div class="users__plain users__plain--visible-2 tooltip text">Авиаперелет</div>
                       </a>
@@ -618,7 +618,7 @@
                     <li class="users__icon icon-list__item">
                       <a class="users__bus-2  icon-list__link">
                         <svg class="icon" width="16" height="16">
-                          <use xlink:href="/img/sprite.svg#bus"></use>
+                          <use xlink:href="../img/sprite.svg#bus"></use>
                         </svg>
                         <div class="users__bus users__bus--visible-2 tooltip text">Автотранспорт</div>
                       </a>
@@ -626,7 +626,7 @@
                     <li class="users__icon icon-list__item">
                       <a class="users__bicycle-2 icon-list__link">
                         <svg class="icon icon--disabled" width="16" height="16">
-                          <use xlink:href="/img/sprite.svg#bicycle"></use>
+                          <use xlink:href="../img/sprite.svg#bicycle"></use>
                         </svg>
                         <div class="users__bicycle users__bicycle--visible-2 tooltip text">Велосипед</div>
                       </a>
@@ -634,7 +634,7 @@
                     <li class="users__icon icon-list__item">
                       <a class="users__walk-2 icon-list__link">
                         <svg class="icon" width="16" height="16">
-                          <use xlink:href="/img/sprite.svg#walk"></use>
+                          <use xlink:href="../img/sprite.svg#walk"></use>
                         </svg>
                         <div class="users__walk users__walk--visible-2 tooltip text">Пешком</div>
                       </a>
@@ -648,7 +648,7 @@
         <a class="users__all button button--arrow" href="allcountries.html">
           <span class="button__caption button--padding-left">Показать всех</span>
           <svg class="button__icon button--padding-right" width="11" height="12">
-            <use xlink:href="/img/sprite.svg#arrow-thick-right"></use>
+            <use xlink:href="../img/sprite.svg#arrow-thick-right"></use>
           </svg>
         </a>
       </div>
@@ -700,7 +700,7 @@
         <a class="profile__business-tarifs button button--transparent-theme" href="businesstarifs.html">
           <div class="profile__show-tarifs">
             <svg class="profile__tarif-icon icon icon--background-padding icon--grey-background" width="28" height="28">
-              <use xlink:href="/img/sprite.svg#businessman"></use>
+              <use xlink:href="../img/sprite.svg#businessman"></use>
             </svg>
             <span class="profile__tarifs-text text button__caption--small">Показать тарифы для бизнеса</span>
           </div>
@@ -720,7 +720,7 @@
           <input type="email" class="feedback__email text text--default" placeholder="E-mail" />
           <button class="feedback__send-email button button--arrow">
             <svg class="button__icon" width="11" height="12">
-              <use xlink:href="/img/sprite.svg#arrow-thick-right"></use>
+              <use xlink:href="../img/sprite.svg#arrow-thick-right"></use>
             </svg>
           </button>
         </form>
@@ -734,7 +734,7 @@
               <svg
                 class="feedback__icon icon-list__link icon icon--main-theme icon--dark-blue-background icon--background-padding"
                 width="17" height="15">
-                <use xlink:href="/img/sprite.svg#home-phone"></use>
+                <use xlink:href="../img/sprite.svg#home-phone"></use>
               </svg>
             </dt>
             <dd class="feedback__details text icon-list__details icon-list__details--light">8 800 555-86-28</dd>
@@ -744,7 +744,7 @@
               <svg
                 class="feedback__icon icon-list__link icon icon--main-theme icon--dark-blue-background icon--background-padding"
                 width="19" height="13">
-                <use xlink:href="/img/sprite.svg#e-mail"></use>
+                <use xlink:href="../img/sprite.svg#e-mail"></use>
               </svg>
             </dt>
             <dd class="feedback__details text icon-list__details icon-list__details--light">MAIL@HTMLACADEMY.RU</dd>
@@ -760,7 +760,7 @@
             <div class="contacts__icon icon-list__item">
               <dt class="icon-list__map-point">
                 <svg class="contacts__map-icon icon icon--background-padding" width="17" height="21">
-                  <use xlink:href="/img/sprite.svg#map-marker"></use>
+                  <use xlink:href="../img/sprite.svg#map-marker"></use>
                 </svg>
               </dt>
               <dd class="text contacts__addres icon-list__details">УЛ. БОЛЬШАЯ <br
@@ -771,7 +771,7 @@
             <span class="contacts__wat-text text button__caption button__caption--light button--padding-left">Проложить
               маршрут</span>
             <svg class="button__icon button--padding-right" width="11" height="12">
-              <use xlink:href="/img/sprite.svg#arrow-thick-right"></use>
+              <use xlink:href="../img/sprite.svg#arrow-thick-right"></use>
             </svg>
           </a>
         </div>
@@ -783,7 +783,7 @@
           height="424" alt="Карта" />
       </picture>
       <svg class="contacts__map-point" width="41" height="41">
-        <use xlink:href="/img/sprite.svg#double-point"></use>
+        <use xlink:href="../img/sprite.svg#double-point"></use>
       </svg>
     </section>
   </main>
@@ -802,7 +802,7 @@
         <li class="page-footer__social-item social-list__item">
           <a class="social-list__link icon icon--dark-blue" href="https://www.facebook.com/htmlacademy">
             <svg class="page-fotter__icon icon icon--background-padding icon--main-background" width="20" height="20">
-              <use xlink:href="/img/sprite.svg#facebook"></use>
+              <use xlink:href="../img/sprite.svg#facebook"></use>
             </svg>
           </a>
         </li>
@@ -810,14 +810,14 @@
           <a class="social-list__link icon icon--dark-blue" href="https://vk.com/htmlacademy">
             <svg class="page-fotter__icon icon icon--background-padding icon--dark-blue icon--main-background"
               width="20" height="20">
-              <use xlink:href="/img/sprite.svg#vk"></use>
+              <use xlink:href="../img/sprite.svg#vk"></use>
             </svg>
           </a>
         </li>
         <li class="page-footer__social-item social-list__item">
           <a class="social-list__link icon icon--dark-blue" href="https://www.instagram.com/htmlacademy">
             <svg class="page-fotter__icon icon--background-padding icon--main-background" width="20" height="20">
-              <use xlink:href="/img/sprite.svg#instagram"></use>
+              <use xlink:href="../img/sprite.svg#instagram"></use>
             </svg>
           </a>
         </li>
@@ -826,7 +826,7 @@
         <span class="page-footer__developed-caption text text--default">Разработано</span>
         <a href="https://htmlacademy.ru/study">
           <svg class="page-footer__logo icon icon--dark-blue" width="27" height="34">
-            <use xlink:href="/img/sprite.svg#logo"></use>
+            <use xlink:href="../img/sprite.svg#logo"></use>
           </svg>
         </a>
       </div>
