moved svg to sprite

--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,7 @@
           <use xlink:href="../img/sprite.svg#menu-toggle-open"></use>
         </svg>
         <svg class="menu__close-icon visually-hidden" width="14" height="14">
-          <use xlink:href="../img/sprite.svg#menu-toggle-close"></use>
+          <use xlink:href="../img/sprite.svg#toggle-close"></use>
         </svg>
       </a>
       <svg class="menu__line" width="60" height="2">
@@ -212,7 +212,7 @@
             <use xlink:href="../img/sprite.svg#menu-toggle-open"></use>
           </svg>
           <svg class="menu__close-icon visually-hidden" width="14" height="14">
-            <use xlink:href="../img/sprite.svg#menu-toggle-close"></use>
+            <use xlink:href="../img/sprite.svg#toggle-close"></use>
           </svg>
         </a>
         <svg class="menu__line menu__line--dark" width="60" height="2">
@@ -271,7 +271,7 @@
           <button class="about__details button button--arrow">
             <span class="button__caption">Подробнее</span>
             <svg width="10" height="18">
-              <use xlink:href="../img/sprite.svg#arrow-thick-right"></use>
+              <use xlink:href="../img/sprite.svg#arrow-right-thick"></use>
             </svg>
           </button>
         </div>
@@ -398,7 +398,7 @@
         <a class="countries__all-countries button button--arrow" href="allcountries.html">
           <span class="button__caption button--padding-left">Показать все</span>
           <svg class="button__icon button--padding-right" width="11" height="12">
-            <use xlink:href="../img/sprite.svg#arrow-thick-right"></use>
+            <use xlink:href="../img/sprite.svg#arrow-right-thick"></use>
           </svg>
         </a>
       </div>
@@ -410,20 +410,9 @@
             <h2 class="users__caption text text--caption">
               Попутчики
             </h2>
-            <!-- <div class="users__background-images"> -->
             <div class="users__background-image-1"></div>
             <div class="users__background-image-2"></div>
             <div class="users__background-image-3"></div>
-            <!-- <picture>
-                <img class="users__back-photo" src="img/smolov-back-desktop.png"
-                  srcset="img/smolov-back-desktop@2x.png 2x" width="143" height="143" alt="Фотографи Смолова" />
-              </picture>
-              <picture>
-                <source media="(min-width: 768px)" srcset="img/back-medium.png 1x, img/back-medium@2x.png 2x">
-                <img class="users__background" src="img/back.svg" srcset="img/back@2x.png 2x" width="226" height="30"
-                  alt="Фоновое изображение" />
-              </picture> -->
-            <!-- </div> -->
             <p class="users__description text text--default">Все мы индивидуальны и у каждого свой взгляд на идеальный
               отдых. Одному нужен пляж и коктейль, а другому маршрут для хайкинга. </p>
             <p class="users__can-find text text--bold">Теперь можно легко найти единомышленников!</p>
@@ -648,7 +637,7 @@
         <a class="users__all button button--arrow" href="allcountries.html">
           <span class="button__caption button--padding-left">Показать всех</span>
           <svg class="button__icon button--padding-right" width="11" height="12">
-            <use xlink:href="../img/sprite.svg#arrow-thick-right"></use>
+            <use xlink:href="../img/sprite.svg#arrow-right-thick"></use>
           </svg>
         </a>
       </div>
@@ -720,7 +709,7 @@
           <input type="email" class="feedback__email text text--default" placeholder="E-mail" />
           <button class="feedback__send-email button button--arrow">
             <svg class="button__icon" width="11" height="12">
-              <use xlink:href="../img/sprite.svg#arrow-thick-right"></use>
+              <use xlink:href="../img/sprite.svg#arrow-right-thick"></use>
             </svg>
           </button>
         </form>
@@ -771,7 +760,7 @@
             <span class="contacts__wat-text text button__caption button__caption--light button--padding-left">Проложить
               маршрут</span>
             <svg class="button__icon button--padding-right" width="11" height="12">
-              <use xlink:href="../img/sprite.svg#arrow-thick-right"></use>
+              <use xlink:href="../img/sprite.svg#arrow-right-thick"></use>
             </svg>
           </a>
         </div>
