modified some styles of companion page

--- a/source/companions.html
+++ b/source/companions.html
@@ -157,7 +157,7 @@
           <svg class="filter__filter-icon" width="16" height="10">
             <use xlink:href="img/sprite.svg#filter"></use>
           </svg>
-          <span class="filter__filter-country-text text">ФИЛЬТРАЦИЯ ПО СТРАНАМ</span>
+          <span class="filter__filter-country-text text">ФИЛЬТРАЦИЯ ПО СТРАНАМ:</span>
           <ul class="filter__continents-list continents-list">
             <li class="continents-list__item  filter__text continents-list__item--active">
               <span class="text">Европа</span>
@@ -199,6 +199,20 @@
         </div>
         <div class="filter__body container visually-hidden">
           <div class="filter__body-container">
+            <ul class="filter__continents-list continents-list filter__continents-list--small">
+              <li class="continents-list__item  filter__text continents-list__item--active">
+                <span class="text">Европа</span>
+              </li>
+              <li class="continents-list__item filter__text">
+                <span class="text">Азия</span>
+              </li>
+              <li class="continents-list__item filter__text">
+                <span class="text">Америка</span>
+              </li>
+              <li class="continents-list__item filter__text">
+                <span class="text">Острова</span>
+              </li>
+            </ul>
             <table class="filter__countries-table alphabet">
               <tr class="filter__latter-row">
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
@@ -1189,32 +1203,36 @@
                       <div class="companions__transport-line line"></div>
                       <ul class="companions__card-list card-list icon-list">
                         <li class="icon-list__item companions__inline-card-item">
-                          <a class="companions__plain-1 icon-list__link icon icon--transparent-theme">
-                            <svg class="icon--active" width="18" height="20">
+                          <a
+                            class="companions__plain-1 companions__icon-background icon-list__link icon icon--transparent-theme">
+                            <svg class="companions__icon icon--active" width="18" height="20">
                               <use xlink:href="img/sprite.svg#plain"></use>
                             </svg>
                             <div class="companions__plain companions__plain--visible-1 tooltip text">Авиаперелет</div>
                           </a>
                         </li>
                         <li class="icon-list__item companions__inline-card-item">
-                          <a class="companions__bus-1 icon-list__link icon icon--transparent-theme">
-                            <svg class="icon--disabled" width="18" height="21">
+                          <a
+                            class="companions__icon-background companions__bus-1 icon-list__link icon icon--transparent-theme">
+                            <svg class="companions__icon icon--disabled" width="18" height="21">
                               <use xlink:href="img/sprite.svg#bus"></use>
                             </svg>
                             <div class="companions__bus companions__bus--visible-1 tooltip text">Автотранспорт</div>
                           </a>
                         </li>
                         <li class="icon-list__item companions__inline-card-item">
-                          <a class="companions__bicycle-1 icon-list__link icon icon--transparent-theme">
-                            <svg class="icon--disabled" width="25" height="24">
+                          <a
+                            class="companions__icon-background companions__bicycle-1 icon-list__link icon icon--transparent-theme">
+                            <svg class="companions__icon icon--disabled" width="25" height="24">
                               <use xlink:href="img/sprite.svg#bicycle"></use>
                             </svg>
                             <div class="companions__bicycle companions__bicycle--visible-1 tooltip text">Велосипед</div>
                           </a>
                         </li>
                         <li class="icon-list__item companions__inline-card-item">
-                          <a class="companions__walk-1 icon-list__link icon icon--transparent-theme icon--pedestrian">
-                            <svg class="icon--disabled" width="21" height="24">
+                          <a
+                            class="companions__walk-1 companions__icon-background companions__icon-background icon-list__link icon icon--transparent-theme">
+                            <svg class="companions__icon companions__icon icon--disabled" width="21" height="24">
                               <use xlink:href="img/sprite.svg#walk"></use>
                             </svg>
                             <div class="companions__walk companions__walk--visible-1 tooltip text">Пешком</div>
@@ -1317,32 +1335,36 @@
                       <div class="companions__transport-line line"></div>
                       <ul class="companions__card-list card-list icon-list">
                         <li class="icon-list__item companions__inline-card-item">
-                          <a class="companions__plain-2 icon-list__link icon icon--transparent-theme">
-                            <svg class="icon--active" width="18" height="20">
+                          <a
+                            class="companions__plain-2 companions__icon-background icon-list__link icon icon--transparent-theme">
+                            <svg class="companions__icon icon--active" width="18" height="20">
                               <use xlink:href="img/sprite.svg#plain"></use>
                             </svg>
                             <div class="companions__plain companions__plain--visible-2 tooltip text">Авиаперелет</div>
                           </a>
                         </li>
                         <li class="icon-list__item companions__inline-card-item">
-                          <a class=" companions__bus-2 icon-list__link icon icon--transparent-theme">
-                            <svg class="icon--active" width="18" height="21">
+                          <a
+                            class=" companions__bus-2 companions__icon-background icon-list__link icon icon--transparent-theme">
+                            <svg class="companions__icon icon--active" width="18" height="21">
                               <use xlink:href="img/sprite.svg#bus"></use>
                             </svg>
                             <div class="companions__bus companions__bus--visible-2 tooltip text">Автотранспорт</div>
                           </a>
                         </li>
                         <li class="icon-list__item companions__inline-card-item">
-                          <a class="companions__bicycle-2 icon-list__link icon icon--transparent-theme">
-                            <svg class="icon--disabled" width="25" height="24">
+                          <a
+                            class="companions__bicycle-2 companions__icon-background icon-list__link icon icon--transparent-theme">
+                            <svg class="companions__icon icon--disabled" width="25" height="24">
                               <use xlink:href="img/sprite.svg#bicycle"></use>
                             </svg>
                             <div class="companions__bicycle companions__bicycle--visible-2 tooltip text">Велосипед</div>
                           </a>
                         </li>
                         <li class="icon-list__item companions__inline-card-item">
-                          <a class="companions__walk-2 icon-list__link icon icon--transparent-theme icon--pedestrian">
-                            <svg class="icon--active" width="21" height="24">
+                          <a
+                            class="companions__walk-2 companions__icon-background icon-list__link icon icon--transparent-theme icon--pedestrian">
+                            <svg class="companions__icon icon--active" width="21" height="24">
                               <use xlink:href="img/sprite.svg#walk"></use>
                             </svg>
                             <div class="companions__walk companions__walk--visible-2 tooltip text">Пешком</div>
@@ -1458,32 +1480,36 @@
                       <div class="companions__transport-line line"></div>
                       <ul class="companions__card-list card-list icon-list">
                         <li class="icon-list__item companions__inline-card-item">
-                          <a class="companions__plain-3 icon-list__link icon icon--transparent-theme">
-                            <svg class="icon--active" width="18" height="20">
+                          <a
+                            class="companions__plain-3 companions__icon-background icon-list__link icon icon--transparent-theme">
+                            <svg class="companions__icon icon--active" width="18" height="20">
                               <use xlink:href="img/sprite.svg#plain"></use>
                             </svg>
                             <div class="companions__plain companions__plain--visible-3 tooltip text">Авиаперелет</div>
                           </a>
                         </li>
                         <li class="icon-list__item companions__inline-card-item">
-                          <a class="companions__bus-3 icon-list__link icon icon--transparent-theme ">
-                            <svg class="icon--disabled" width="18" height="21">
+                          <a
+                            class="companions__bus-3 companions__icon-background icon-list__link icon icon--transparent-theme ">
+                            <svg class="companions__icon icon--disabled" width="18" height="21">
                               <use xlink:href="img/sprite.svg#bus"></use>
                             </svg>
                             <div class="companions__bus companions__bus--visible-3 tooltip text">Автотранспорт</div>
                           </a>
                         </li>
                         <li class="icon-list__item companions__inline-card-item">
-                          <a class="companions__bicycle-3 icon-list__link icon icon--transparent-theme ">
-                            <svg class="icon--active" width="25" height="24">
+                          <a
+                            class="companions__bicycle-3 companions__icon-background icon-list__link icon icon--transparent-theme ">
+                            <svg class="companions__icon icon--active" width="25" height="24">
                               <use xlink:href="img/sprite.svg#bicycle"></use>
                             </svg>
                             <div class="companions__bicycle companions__bicycle--visible-3 tooltip text">Велосипед</div>
                           </a>
                         </li>
                         <li class="icon-list__item companions__inline-card-item">
-                          <a class="companions__walk-3 icon-list__link icon icon--transparent-theme icon--pedestrian">
-                            <svg class="icon--disabled" width="21" height="24">
+                          <a
+                            class="companions__walk-3 companions__icon-background icon-list__link icon icon--transparent-theme icon--pedestrian">
+                            <svg class="companions__icon icon--disabled" width="21" height="24">
                               <use xlink:href="img/sprite.svg#walk"></use>
                             </svg>
                             <div class="companions__walk companions__walk--visible-3 tooltip text">Пешком</div>
@@ -1584,32 +1610,35 @@
                       <div class="companions__transport-line line"></div>
                       <ul class="companions__card-list card-list icon-list">
                         <li class="companions__plain-4 icon-list__item companions__inline-card-item">
-                          <a class="icon-list__link icon icon--transparent-theme ">
-                            <svg class="icon--active" width="18" height="20">
+                          <a class="companions__icon-background icon-list__link icon icon--transparent-theme ">
+                            <svg class="companions__icon icon--active" width="18" height="20">
                               <use xlink:href="img/sprite.svg#plain"></use>
                             </svg>
                             <div class="companions__plain companions__plain--visible-4 tooltip text">Авиаперелет</div>
                           </a>
                         </li>
                         <li class="icon-list__item companions__inline-card-item">
-                          <a class="companions__bus-4 icon-list__link icon icon--transparent-theme ">
-                            <svg class="icon--active" width="18" height="21">
+                          <a
+                            class="companions__bus-4 companions__icon-background icon-list__link icon icon--transparent-theme ">
+                            <svg class="companions__icon icon--active" width="18" height="21">
                               <use xlink:href="img/sprite.svg#bus"></use>
                             </svg>
                             <div class="companions__bus companions__bus--visible-4 tooltip text">Автотранспорт</div>
                           </a>
                         </li>
                         <li class="icon-list__item companions__inline-card-item">
-                          <a class="companions__bicycle-4 icon-list__link icon icon--transparent-theme ">
-                            <svg class="icon--disabled" width="25" height="24">
+                          <a
+                            class="companions__icon-background companions__bicycle-4 icon-list__link icon icon--transparent-theme ">
+                            <svg class="companions__icon icon--disabled" width="25" height="24">
                               <use xlink:href="img/sprite.svg#bicycle"></use>
                             </svg>
                             <div class="companions__bicycle companions__bicycle--visible-4 tooltip text">Велосипед</div>
                           </a>
                         </li>
                         <li class="icon-list__item companions__inline-card-item">
-                          <a class="companions__walk-4 icon-list__link icon icon--transparent-theme icon--pedestrian">
-                            <svg class="icon--disabled" width="21" height="24">
+                          <a
+                            class="companions__walk-4 companions__icon-background icon-list__link icon icon--transparent-theme icon--pedestrian">
+                            <svg class="companions__icon icon--disabled" width="21" height="24">
                               <use xlink:href="img/sprite.svg#walk"></use>
                             </svg>
                             <div class="companions__walk companions__walk--visible-4 tooltip text">Пешком</div>
