modified some styles

--- a/source/directions.html
+++ b/source/directions.html
@@ -228,12 +228,12 @@
           <ul class="user-plans__list plan-list">
             <li class="plan-list__item">
               <div class="plan-list__header">
-                <span class="country-list__item">1. </span>
+                <span class="plan-list__index country-list__item">1. </span>
                 <ul class="plan-list__countries country-list">
-                  <li class="country-list__item country-list__comma">
-                    <span class="text">Франция</span>
+                  <li class="plan-list__country country-list__item">
+                    <span class="text">Франция,</span>
                   </li>
-                  <li class="country-list__item">
+                  <li class="plan-list__country country-list__item">
                     <span class="text">Италия</span>
                   </li>
                 </ul>
@@ -250,7 +250,7 @@
                     <dt class="details-list__date">
                       26 МАР
                     </dt>
-                    <dd class="details-list__date-details">- 29 МАР</dd>
+                    <dd class="details-list__date-details"> 29 МАР</dd>
                   </div>
                 </dl>
                 <a class="plan-list__change button button--change">
@@ -260,12 +260,12 @@
             </li>
             <li class="plan-list__item">
               <div class="plan-list__header">
-                <span class="country-list__item">2. </span>
+                <span class="plan-list__index country-list__item">2. </span>
                 <ul class="plan-list__countries country-list">
-                  <li class="country-list__item country-list__comma">
-                    <span class="text">Тайланд</span>
+                  <li class="plan-list__country country-list__item">
+                    <span class="text">Тайланд,</span>
                   </li>
-                  <li class="country-list__item">
+                  <li class="plan-list__country country-list__item">
                     <span class="text">Индонезия</span>
                   </li>
                 </ul>
@@ -282,7 +282,7 @@
                     <dt class="details-list__date">
                       1 ИЮЛ
                     </dt>
-                    <dd class="details-list__date-details">- 15 ИЮЛ</dd>
+                    <dd class="details-list__date-details"> 15 ИЮЛ</dd>
                   </div>
                 </dl>
                 <a class="plan-list__change button button--change">
