fixed errors in html

--- a/source/companions.html
+++ b/source/companions.html
@@ -174,7 +174,7 @@
           </ul>
           <span class="filter__show-all text filter__text">Показать все</span>
           <span class="filter__hide filter__text text visually-hidden">Свернуть</span>
-          <button class="filter__toggle-button button button--transparent-theme" type="button">
+          <a class="filter__toggle-button button button--transparent-theme" href="#">
             <ul class="filter__points slider-toggles filter__toggle filter__toggle--opened">
               <li class="filter__point">
                 <svg class="filter__point-icon" width="5" height="5">
@@ -195,7 +195,7 @@
             <svg class="filter__toggle filter__toggle--closed visually-hidden" width="14" height="14">
               <use xlink:href="img/sprite.svg#toggle-close"></use>
             </svg>
-          </button>
+          </a>
         </div>
         <div class="filter__body container visually-hidden">
           <div class="filter__body-container">
