--- a/source/directions.html
+++ b/source/directions.html
@@ -381,171 +381,6 @@
                     <use xlink:href="img/sprite.svg#arrow-right-thin"></use>
                   </svg>
                 </div>
-                <!-- <div class="step-list__days calendar">
-                  <ul class="step-list__line step-list__line--header">
-                    <li class="calendar__day calendar__header text">
-                      <span>П</span>
-                    </li>
-                    <li class="calendar__day calendar__header text">
-                      <span>В</span>
-                    </li>
-                    <li class="calendar__day calendar__header text">
-                      <span>С</span>
-                    </li>
-                    <li class="calendar__day calendar__header text">
-                      <span>Ч</span>
-                    </li>
-                    <li class="calendar__day calendar__header text">
-                      <span>П</span>
-                    </li>
-                    <li class="calendar__day calendar__header calendar__day--weakened text">
-                      <span>С</span>
-                    </li>
-                    <li class="calendar__day  calendar__header calendar__day--weakened text">
-                      <span>В</span>
-                    </li>
-                  </ul>
-                  <ul class="step-list__line">
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>23</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>24</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>25</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>26</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>27</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>28</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>1</span>
-                    </li>
-                  </ul>
-                  <ul class="step-list__line">
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>2</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>3</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>4</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>5</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>6</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>7</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>8</span>
-                    </li>
-                  </ul>
-                  <ul class="step-list__line">
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>9</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>10</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>11</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>12</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>13</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>14</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>15</span>
-                    </li>
-                  </ul>
-                  <ul class="step-list__line">
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>16</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>17</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>18</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>19</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>20</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>21</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>22</span>
-                    </li>
-                  </ul>
-                  <ul class="step-list__line">
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>23</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>24</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--disabled text">
-                      <span>25</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--selected calendar__day--active text">
-                      <span>26</span>
-                      <span class="calendar__notice">Заезд</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--selected calendar__day--active text">
-                      <span>27</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--selected calendar__day--active text">
-                      <span>28</span>
-                      <span class="calendar__notice">Выезд</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day  text calendar__day--active">
-                      <span>29</span>
-                    </li>
-                  </ul>
-                  <ul class="step-list__line">
-                    <li class="calendar__day-cell calendar__day calendar__day--active text">
-                      <span>30</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--active text">
-                      <span>31</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--active text">
-                      <span>1</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--active text">
-                      <span>2</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--active text">
-                      <span>3</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--active text">
-                      <span>4</span>
-                    </li>
-                    <li class="calendar__day-cell calendar__day calendar__day--active text">
-                      <span>5</span>
-                    </li>
-                  </ul>
-                </div> -->
                 <table class="step-list__days calendar">
                   <tr class="calendar__day-row">
                     <th class="calendar__day calendar__header text">
@@ -1224,10 +1059,9 @@
                   <svg class="add-plans__circle-icon add-plans__circle-icon--add-button" width="8" height="8">
                     <use xlink:href="img/sprite.svg#point"></use>
                   </svg>
-                  <div class="step-list__add-plus step-list__plus--2">
-                    <div class="step-list__horizontal-line step-list__horizontal-line--plus"></div>
-                    <div class="step-list__vertical-line"></div>
-                  </div>
+                  <svg class="step-list__add-plus step-list__plus--2" width="14" height="14">
+                    <use xlink:href="img/sprite.svg#plus"></use>
+                  </svg>
                 </button>
                 <div class="step-list__nav-buttons">
                   <button type="button" class="add-plans__button-step button button--middle-theme">
